# internal/handlers/health/health.go
@@ -32,22 +32,29 @@ func NewHealthHandler(s *services.Service, logger *utils.Logger) Health {
 // @Produce json
 // @Param request body entity.HealthMetricsRequest true "Health metrics payload"
 // @Success 201 {object} map[string]string "status message"
-// @Failure 400 {object} map[string]string "invalid request"
-// @Failure 500 {object} map[string]string "failed to create health metrics"
+// @Failure 400 {object} entity.ErrorMessage "invalid request"
+// @Failure 500 {object} entity.ErrorMessage "failed to create health metrics"
 // @Router /api/v1/metrics [post]
 func (h *health) CreateHealthMetrics(c *gin.Context) {
 	ctx := c.Request.Context()
 
 	var req entity.HealthMetricsRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
+		c.JSON(http.StatusBadRequest, entity.ErrorMessage{Message: "invalid request"})
 		return
 	}
 
 	err := h.s.Health.CreateHealthMetric(ctx, req)
 	if err != nil {
 		h.logger.Errorf("CreateHealthMetrics error: %v", err)
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to create health metrics"})
+		c.JSON(http.StatusInternalServerError, entity.ErrorMessage{Message: "failed to create health metrics"})
+		return
+	}
+
+	err = h.s.Location.CreateLocation(ctx, req)
+	if err != nil {
+		h.logger.Errorf("CreateLocation error: %v", err)
+		c.JSON(http.StatusInternalServerError, entity.ErrorMessage{Message: "failed to create location"})
 		return
 	}
 
@@ -62,15 +69,15 @@ func (h *health) CreateHealthMetrics(c *gin.Context) {
 // @Produce json
 // @Param user_id query int true "User ID"
 // @Success 200 {array} object "list of health metrics"
-// @Failure 400 {object} map[string]string "invalid user_id or missing parameter"
-// @Failure 500 {object} map[string]string "failed to get health metrics"
+// @Failure 400 {object} entity.ErrorMessage "invalid user_id or missing parameter"
+// @Failure 500 {object} entity.ErrorMessage "failed to get health metrics"
 // @Router /api/v1/metrics [get]
 func (h *health) GetHealthMetrics(c *gin.Context) {
 	ctx := c.Request.Context()
 
 	userIdParam := c.Query(entity.RequestParamUserID)
 	if userIdParam == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "user_id query parameter is required"})
+		c.JSON(http.StatusBadRequest, entity.ErrorMessage{Message: "invalid request"})
 		return
 	}
 
@@ -78,12 +85,12 @@ func (h *health) GetHealthMetrics(c *gin.Context) {
 	userId, err := strconv.Atoi(userIdParam)
 	if err != nil {
 		h.logger.Errorf("GetHealthMetrics error: %v", err)
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid user_id"})
+		c.JSON(http.StatusBadRequest, entity.ErrorMessage{Message: "invalid request"})
 	}
 
 	metrics, err := h.s.Health.GetMetricsByUserId(ctx, userId)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to get health metrics"})
+		c.JSON(http.StatusInternalServerError, entity.ErrorMessage{Message: "failed to get health metrics"})
 		return
 	}
 
