# internal/handlers/user/user.go
@@ -32,9 +32,9 @@ func NewUserHandler(s *services.Service, logger *utils.Logger) User {
 // @Accept json
 // @Produce json
 // @Param request body entity.UserRegisterRequest true "User registration payload"
-// @Success 201 {object} map[string]interface{} "created user id"
-// @Failure 400 {object} map[string]string "invalid request"
-// @Failure 500 {object} map[string]string "failed to register user"
+// @Success 201 {object} entity.CreatedUserResponse "created user id"
+// @Failure 400 {object} entity.ErrorMessage "invalid request"
+// @Failure 500 {object} entity.ErrorMessage "failed to register user"
 // @Router /api/v1/register [post]
 func (u *user) Register(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -42,17 +42,17 @@ func (u *user) Register(c *gin.Context) {
 	var req entity.UserRegisterRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		u.logger.Errorf("Bind json error: %v", err)
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
+		c.JSON(http.StatusBadRequest, entity.ErrorMessage{Message: "invalid request"})
 	}
 
 	userId, err := u.s.User.Register(ctx, req)
 	if err != nil {
 		u.logger.Errorf("Register error: %v", err)
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "failed to register user"})
+		c.JSON(http.StatusInternalServerError, entity.ErrorMessage{Message: "failed to register user"})
 		return
 	}
 
-	c.JSON(http.StatusCreated, gin.H{"user_id": userId})
+	c.JSON(http.StatusCreated, entity.CreatedUserResponse{UserID: userId})
 }
 
 // Login
@@ -63,23 +63,23 @@ func (u *user) Register(c *gin.Context) {
 // @Produce json
 // @Param request body entity.UserLoginRequest true "User login payload"
 // @Success 200 {object} map[string]interface{} "authenticated user"
-// @Failure 400 {object} map[string]string "invalid request"
-// @Failure 401 {object} map[string]string "invalid email or password"
-// @Failure 500 {object} map[string]string "internal server error"
+// @Failure 400 {object} entity.ErrorMessage "invalid request"
+// @Failure 401 {object} entity.ErrorMessage "invalid email or password"
+// @Failure 500 {object} entity.ErrorMessage "internal server error"
 // @Router /api/v1/login [post]
 func (u *user) Login(c *gin.Context) {
 	ctx := c.Request.Context()
 
 	var req entity.UserLoginRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
+		c.JSON(http.StatusBadRequest, entity.ErrorMessage{Message: "invalid request"})
 		return
 	}
 
 	userResponse, err := u.s.User.Login(ctx, req)
 	if err != nil {
 		u.logger.Errorf("Login error: %v", err)
-		c.JSON(http.StatusUnauthorized, gin.H{"error": "invalid email or password"})
+		c.JSON(http.StatusUnauthorized, entity.ErrorMessage{Message: "failed to login"})
 		return
 	}
 
